--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,24 @@
-body {
-    background: gray;
+.field {
+    display: flex;
+    margin: 50px auto;
+    border: 1px solid #000;
+    width: 640px;
+    height: 640px;
+    flex-wrap: wrap;
+}
+
+.excel {
+    width: 78px;
+    height: 78px;
+    border: 1px solid #000;
+    font-size: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.current {
+    color: transparent;
+    background: url(//img/horse.png) center no-repeat;
+    background-size: cover;
 }
