feat: the horse gets to a random place

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,6 +19,6 @@
 
 .current {
     color: transparent;
-    background: url(//img/horse.png) center no-repeat;
+    background: url("../img/horse.png") center no-repeat;
     background-size: cover;
 }
